--- a/style.css/login.css
+++ b/style.css/login.css
@@ -2,6 +2,31 @@
     background-color: #F0F2F5;
 }
 
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #F1F2F3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+.loader.hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
+}
+
 .form-check-label {
     font-size: 12px;
 }
