--- a/style.css/dashboard.css
+++ b/style.css/dashboard.css
@@ -169,6 +169,7 @@ a {
     margin: 1.5% auto 25%;
     border: 1px solid #888;
     border: 3px solid #f1f1f1;
+    border-radius: 10px;
     width: 50%;
 }
 
